plugins {
	id 'java'
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
	id 'com.gradleup.shadow' version "${shadow_version}"
	id 'wynnextras.badge-resources'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	mavenCentral()
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	maven { url = "https://api.modrinth.com/maven" }
	maven { url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1" }
	maven {
		name = "Terraformers"
		url = "https://maven.terraformersmc.com/"
	}
	maven {
		name = "Cloth Config"
		url = "https://maven.shedaniel.me/"
	}
	maven {
		name = "NeoForged"
		url = "https://maven.neoforged.net/releases"
	}

	maven { url = "https://repo.maven.apache.org/maven2" }
}

configurations {
	shadowImpl
	shadowModImpl
}
configurations.implementation.extendsFrom configurations.shadowImpl
configurations.modImplementation.extendsFrom configurations.shadowModImpl

fabricApi {
	configureDataGeneration {
		client = true
	}
}

sourceSets {
    test {
        java {
            srcDirs = ['src/test/java']
        }
    }
}

dependencies {
	testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"

	implementation 'org.apache.httpcomponents:httpclient:4.5.14'

	//intellij showed some warnings about vulnerable dependencies so this should fix it
	implementation platform("io.netty:netty-bom:4.2.10.Final")
	implementation platform("org.apache.logging.log4j:log4j-bom:2.25.4")

	modRuntimeOnly "me.djtheredstoner:DevAuth-fabric:1.2.1"

//	modRuntimeOnly "maven.modrinth:wynnmod:2.0.1"
//
//	shadowImpl 'tools.jackson.core:jackson-core:3.0.0'
//	shadowImpl 'tools.jackson.core:jackson-databind:3.0.0'
//	shadowImpl 'com.fasterxml.jackson.core:jackson-annotations:2.20'

	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	shadowImpl 'org.reflections:reflections:0.10.2'
	shadowImpl("net.neoforged:bus:${project.neoforged_bus_version}") {
		exclude group: 'org.ow2.asm', module: 'asm'
		exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
	}
}

test {
    useJUnitPlatform()
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	//withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

remapJar {
	dependsOn shadowJar

//	archiveClassifier.set('remapped')
	inputFile.set shadowJar.archiveFile.get().asFile
	sourceNamespace = "named"
	targetNamespace = "intermediary"
}

tasks.named("shadowJar").configure {
	configurations = [project.configurations.shadowImpl, project.configurations.shadowModImpl]
	archiveClassifier.set('all')
	exclude 'javassist/tools/rmi/AppletServer.class'
	relocate 'net.neoforged.bus', 'julianh06.wynnextras.shadow.neoforged.bus'
	relocate 'net.jodah.typetools', 'julianh06.wynnextras.shadow.typetools'
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}